search items endpoint from post to get
