# predict/src/main/kotlin/com/hellena/predict/api/ItemApiServiceImpl.kt
@@ -1,9 +1,7 @@
 package com.hellena.predict.api
 
 import com.hellena.predict.api.model.*
-import com.hellena.predict.fetch.konzum.Konzum
 import com.hellena.predict.item.ItemSearch
-import com.hellena.predict.item.feature.ItemFeatureType
 import com.hellena.predict.item.service.ItemInsertService
 import com.hellena.predict.item.service.ItemService
 import com.hellena.predict.search.Page
@@ -11,9 +9,10 @@ import com.hellena.predict.search.Sort
 import com.hellena.predict.search.SortDirection
 import org.springframework.http.HttpHeaders
 import org.springframework.http.HttpStatus
+import org.springframework.http.MediaType
 import org.springframework.http.ResponseEntity
 import org.springframework.stereotype.Service
-import java.util.stream.Collectors
+import java.math.BigDecimal
 
 
 @Service
@@ -49,34 +48,52 @@ class ItemApiServiceImpl(val itemService: ItemService, val itemInsertService: It
         return ResponseEntity(itemService.getStores(), HttpStatus.OK)
     }
 
-    override fun searchItems(searchItemDto: SearchItemDto?): ResponseEntity<PageItemDto> {
-
+    override fun searchItems(pageIndex: kotlin.Long,
+                    pageSize: kotlin.Long,
+                    categoryIds: kotlin.collections.List<kotlin.Long>?,
+                    storeIds: kotlin.collections.List<kotlin.Long>?,
+                    pageSortName: kotlin.String?,
+                    pageSortDirection: kotlin.String?,
+                    name: kotlin.String?,
+                    priceMin: java.math.BigDecimal?,
+                    priceMax: java.math.BigDecimal?): ResponseEntity<PageItemDto> {
         val search = ItemSearch(
-            name = searchItemDto?.name,
+            name = name,
             nameStarsWith = false,
-            cityName = searchItemDto?.cityName,
-            storeIds = searchItemDto!!.storeIds,
-            categoryIds = searchItemDto!!.categoryIds,
-            priceMax = searchItemDto?.priceMax,
-            priceMIn = searchItemDto?.priceMIn,
-            page = toPage(searchItemDto.page)
+            storeIds = storeIds ?: emptyList<Long>(),
+            categoryIds = categoryIds ?: emptyList<Long>(),
+            priceMax = priceMax,
+            priceMIn = priceMin,
+            page = toPage(pageIndex, pageSize, pageSortName, pageSortDirection)
         )
         // TODO implement feature
         return ResponseEntity(itemService.getItems(search, null), HttpStatus.OK);
+
     }
 
-    fun toPage(pageDto: PageDto): Page {
+    fun toPage(pageIndex: Long,
+                pageSize: Long,
+                pageSortName: String?,
+                pageSortDirection: String?): Page {
         return object: Page {
             override fun getIndex(): Long {
-                return pageDto.index;
+                return pageIndex;
             }
             override fun getSize(): Long {
-                return pageDto.size
+                return pageSize
             }
             override fun getSort(): List<Sort> {
-                return pageDto.sort.stream()
-                    .map { toSort(it) }
-                    .collect(Collectors.toList());
+                return listOf(
+                    object : Sort {
+                        override fun getName(): String {
+                            return pageSortName!!;
+                        }
+
+                        override fun getDir(): SortDirection {
+                            return SortDirection.ASC;
+                        }
+                    }
+                )
             }
         }
     }
