# predict/src/main/resources/api/api.yaml
@@ -61,14 +61,62 @@ paths:
   /item/search:
     summary: Item search endpoint
     description: Search items include paggination and sort support
-    post:
+    get:
       operationId: searchItems
-      requestBody:
-        content:
-          application/json:
-            schema:
-              type: object
-              $ref: '#/components/schemas/searchItemDto'
+      parameters:
+        - name: categoryIds
+          in: query
+          required: false
+          schema:
+            type: array
+            items:
+              type: integer
+              format: int64
+        - name: storeIds
+          in: query
+          required: false
+          schema:
+            type: array
+            items:
+              type: integer
+              format: int64
+        - name: pageIndex
+          in: query
+          required: true
+          schema:
+            type: integer
+            format: int64
+        - name: pageSize
+          in: query
+          required: true
+          schema:
+            type: integer
+            format: int64
+        - name: pageSortName
+          in: query
+          required: false
+          schema:
+            type: string
+        - name: pageSortDirection
+          in: query
+          required: false
+          schema:
+            type: string
+        - name: name
+          in: query
+          required: false
+          schema:
+            type: string
+        - name: priceMin
+          in: query
+          required: false
+          schema:
+            type: number
+        - name: priceMax
+          in: query
+          required: false
+          schema:
+            type: number
       responses:
         '200':
           description: A JSON array of items
